# cookie-doh

./: .apidoc_conf.py  .apidoc_conf.py.jinja  .codespellrc  .copier-answers.yml.jinja  .coveragerc  .cz.toml  .dockerignore  .envrc  .gitignore  .pre-commit-config.yaml  .pre-commit-config.yaml.jinja  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTING.md.jinja  Dockerfile  Dockerfile.jinja  LICENSE.jinja  README.md  README.md.jinja  SUPPORT.md  SUPPORT.md.jinja  cookie-doh.code-workspace  copier.yml  mkdocs.yml  mkdocs.yml.jinja  pyproject.toml  pyproject.toml.jinja  pyrightconfig.json  pytest.ini  ruff.toml  ruff.toml.jinja  {{project_name}}.code-workspace.jinja
.azure-pipelines/: cg.yml  cg.yml.jinja
.devcontainer/: Dockerfile  Dockerfile.jinja  devcontainer.json  direnvrc  on-create.sh  on-create.sh.jinja  post-create.sh  post-create.sh.jinja
.github/: dependabot.yaml
.github/workflows/: automerge.yml  automerge.yml.jinja  build-docs.yml  build-wheels.yml  ci.yml  codeql.yml  copier.yml  copilot-setup-steps.yml  docs.yml  main.yml  main.yml.jinja  pr.yml  pr.yml.jinja  pre-commit.yml  precommit.yml  run-tests.yml  tests.yml  weekly.yml  wheels.yml  zizmor.yml
docs/: .pages  _headers  dev_setup.md  getting_started.md  getting_started.md.jinja  index.md  index.md.jinja  reference.md  reference.md.jinja  repo_structure.md
docs/css/: extra.css
src/python/{{module_name}}/: example.py
template/: .codespellrc  .gitignore.jinja  Dockerfile.jinja  README.md.jinja  SUPPORT.md.jinja  poetry.toml  pyproject.toml.jinja  pyrightconfig.json  ruff.toml.jinja  {% if commitizen %}.cz.toml{% endif %}.jinja  {% if documentation %}.apidoc_conf.py{% endif %}.jinja  {% if documentation %}mkdocs.yml{% endif %}.jinja  {% if microsoft_internal %}.azure-pipelines{% endif %}  {% if not microsoft_internal %}CODE_OF_CONDUCT.md{% endif %}.jinja  {% if not microsoft_internal %}SECURITY.md{% endif %}.jinja  {% if precommit %}.pre-commit-config.yaml{% endif %}.jinja  {{project_name}}.code-workspace.jinja
template/.github/: dependabot.yaml
template/.github/workflows/: automerge.yml.jinja  codeql.yml  main.yml.jinja  pr.yml.jinja  run-tests.yml  weekly.yml  wheels.yml  {% if documentation %}build-docs.yml{% endif %}  {% if documentation %}docs.yml{% endif %}  {% if precommit %}pre-commit.yml{% endif %}
template/src/: {{module_name}}
template/test/: test_{{module_name}}
test/test_cookie/: test_jinja.py
test/test_{{module_name}}/: test_example.py
