[project]
authors = [{ name = "microsoft" }]
license = { text = "MIT License" }
requires-python = ">=3.12"
name = "cookie-doh"
version = "0.0.22"
description = ""
readme = "README.md"
dependencies = []                  # write here dependencies of your project

[dependency-groups]
dev = [
    "codespell",
    "coverage",
    "ipykernel",
    "jinja2",
    "ruff",
    "pyright",
    "pytest",
]
docs = [
    "mkdocs",
    "mkdocs-awesome-pages-plugin",
    "mkdocs-git-revision-date-localized-plugin",
    "mkdocs-material",
    "mkdocs-video",
    "mkdocstrings",
    "mkdocstrings-python",
    "pymdown-extensions",
]

[tool.uv]
default-groups = ["dev", "docs"]

[tool.hatch.build.targets.wheel]
packages = ["src/cookie"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
