[project]
authors = [{ name = "Javier Zazo", email = "javierzazo@microsoft.com" }]
license = { text = "MIT License" }
requires-python = ">=3.12"
name = "cookie-doh"
version = "0.0.24"
description = ""
readme = "README.md"
dependencies = []

[dependency-groups]
dev = ["codespell", "coverage", "ipykernel", "jinja2", "ruff", "pyright", "pytest", "pytest-cov"]
docs = [
    "mkdocs",
    "mkdocs-awesome-pages-plugin",
    "mkdocs-git-revision-date-localized-plugin",
    "mkdocs-material",
    "mkdocs-video",
    "mkdocstrings",
    "mkdocstrings-python",
    "pymdown-extensions",
]

[project.urls]
repository = "https://github.com/microsoft/cookie-doh"
documentation = "https://microsoft.github.io/cookie-doh"

[tool.uv]
default-groups = ["dev", "docs"]

[tool.hatch.build.targets.wheel]
packages = ["src/cookie"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
